# pNMRsim

./: .gitignore  2Dproc.cc  Action.cc  Action.h  Actionstub.cc  Interaction.cc  Interaction.h  LICENSE  Looping.cc  Loopingstub.cc  Makefile.in  NEWS  NMR.cc  NMR_RF.cc  NMR_RFstub.cc  NMR_acq.cc  NMR_acqstub.cc  NMRsim.h  NMRsim_MasterObj.h  NMRsim_Process.h  NMRsim_RF.h  NMRsim_common.h  NMRsim_logfile.h  NMRsim_matrixspec.h  NMRsim_spinsys.h  NMRstub.cc  Parser.cc  Parser.h  Process.cc  README.md  assign_const_action.hpp  autoopt.cc  cmatrix_hash_set.h  common.cc  config.status  configure  configure.ac  expression_definition.cc  expression_definition.hpp  fit.cc  (+13 more)
docs/: Doxyfile
extras/: CF3.inc  CH2wibble.cc  CH2wibbleold.cc  CSD_CIF_LALNIN12_nmr.magres  F3.inc  Hdensity.cc  Makefile  Makefile.in  adamantane9_modelfull.inc  analyseMQ.cc  analyseMQ.in  boundfunctions.inc  calcav2.cc  calcaverage.cc  calcdrss  compfid.cc  constants.py  createdip.cc  crys_dip.cc  cryswibble.cc  cryswibbleold.cc  dumpmatlab.cc  extrafunctions.inc  extras.cc  finddrss.in  fulltrans.inc  geometry_utils.cc  geometry_utils.h  glycine.gsimmagres  magres.h  magres2gsim  magres2pNMRsim.cc  makecryfiles.py  makedumbo.c  makeexchange.py  makespec200.in  makespec200.spe  makespec200static.in  makespec500.in  maketet.sh  (+13 more)
test/: 2D.in  2HEXSY.in  CM.in  CSA.in  CSA15N.in  CSAexch.in  CSAslow.in  CSAstatic.in  CSAstatic_single.in  DQSQ.in  DQSQEXSY.in  DQSQEXSY_cp.in  EXSY.in  FSLG.in  H.in  HF.in  Hfit.in  Jstatic.in  LG.in  PMLG.in  PMLG.inc  PMLGN.in  PMLGexact.in  POSTC7.inc  README  RFphase.in  RR.in  Statestest.in  T2CW_putmat.in  adamantane9_model.inc  applytest.in  betatestdelay.in  cp.in  cpfit.in  cplg.in  csa_MAS_full_td.in  csa_MAS_full_tdg.in  cwstatic.in  d2_opt1.in  filter.in  (+91 more)
